build: Use JDK compiler.